sidebar collapse correction

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,6 +136,10 @@
   padding-left: 1.5rem;
 }
 
+#sidebar ul.nav .nav-link i {
+  margin-right: 1rem;
+}
+
 #sidebar.collapsed {
   width: 70px;
   padding-right: 0.5rem;
